# dev.Chartter.v2

./: .gitignore  Cloasing-note.md  PYdev.code-workspace  README.md  package-lock.json  package.json  pyproject.toml  release.config.js  wget-log
Codes/Src/: EURUSD1.parquet  xauusdm15.filtered.csv
Codes/V10/: Chartter-plotX2-4.arc.ipynb  Chartter-plotX2-4.ipynb  Samanas-1A.ipynb  Samanas-1B.ipynb  SetslX1.py  Untitled-1.py
Codes/V10/src/: enterprise_trading_results.parquet
Codes/V11/: Samanas-1B.ipynb  express.py  plots-sns.ipynb  resampler.py
Codes/V3/: Chartter-1.ipynb  Chartter-2.ipynb  dta-prepare-1.ipynb  dta-prepare.ipynb  splitter.ipynb
Codes/V3/nsrc/: DAT_ASCII_XAUUSD_1H_2024.parquet  DAT_ASCII_XAUUSD_4H_2024.parquet
Codes/V3/src/: DAT_ASCII_XAUUSD_15M_2024.parquet  DAT_ASCII_XAUUSD_1M_NOV1STW.parquet
Codes/V4/: Chartter-2.ipynb  Chartter-2X.ipynb  Chartter-2a.ipynb  Chartter-2b.ipynb  Chartter-2c-play.ipynb  Chartter-2c.ipynb
Codes/V5/: Chartter-2X.ipynb  Chartter-plot-1.ipynb  ChartterX5.py  Interactive-1.ipynb  resampler.py
Codes/V6/: Chartter-plot-1.ipynb
Codes/V7/: Chartter-plot-1.ipynb  Chartter-plotX2-1.ipynb  Chartter-plotX2-2.ipynb  Convert-csv.ipynb  applyiedMacd-1.csv  bt.result.csv  lorem.ipynb  lorem2.ipynb
Codes/V8/: ChartterX5.py  lore.py  sampleSignal.parquet  trading_report_20250927_090426.xlsx  tst-SignalDta.ipynb
Codes/V9/: Chartter-plotX2-3.ipynb  Chartter-plotX2-4.ipynb  sampleSignal.parquet  tafm.py
Codes/X1/enterprise_trading_system/: README.md  requirements.txt  setup.py
Codes/X1/enterprise_trading_system/enterprise_trading_system/: __init__.py  config.py  generator.py  orchestrator.py  processor.py  utils.py  validator.py  visualizer.py
Codes/modules/tafm/tafm/: __init__.py  hello.py  lorem.py
Codes/modules/taframework/: README.md  requirements.txt  setup.py  tster.ipynb
Codes/modules/taframework/taframework/: __init__.py  analyzer.py  comparators.py  data_classes.py  enums.py  exceptions.py  indicator_engine.py  profiler.py  (+4 more)
Codes/playSpace/: play-with-charts.ipynb
Codes/v1/: lorem.ipynb
Codes/v2/: Notes.md  arch.dta-modeling-15M.ipynb  data.parquet  dta-cleanner.ipynb  dta-collector.ipynb  dta-modeling-15M.ipynb  dta-preparation.ipynb  lorem-3.ipynb  lorem.ipynb  view-cahrt-1.ipynb  view.ipynb
Notes/2025-09-20/: 2025-09-20T06-00-53-401Z.md  2025-09-20T07-13-27-630Z.md  2025-09-20T07-59-13-804Z.md
Notes/2025-09-21/: 2025-09-21T01-58-51-183Z.md  2025-09-21T05-35-45-949Z.md
Scripts/: Create_log.md  Create_logs.js  auto-commit.js  auto-commit.md
Study/6OCT25/: one.ipynb
Study/SRC/: Tomato-mandi-price-data.csv
(+1 files in other folders)
