[project]
name = "dev-chartter-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Avijit Sarkar",email = "avisoffice@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "dev"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
