[tool.poetry]
name = "dev-chartter-v2"
version = "0.1.0"
description = "A trading and data analysis project for financial charting, backtesting, and technical analysis"
authors = ["Avijit Sarkar <avisoffice@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/dev-chartter-v2"
homepage = "https://github.com/yourusername/dev-chartter-v2"
keywords = ["trading", "data-analysis", "finance", "charting", "backtesting"]
package-mode = false  # Disable package mode

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pandas = "~=2.3.2"
yfinance = "~=0.2.65"
scipy = "~=1.16.2"
python-dotenv = "~=1.0.1"
matplotlib = "~=3.10.6"
mplfinance = "~=0.12.10b0"
pyqt5 = { version = "~=5.15.11", optional = true }
ta = "~=0.11.0"
backtrader = { version = "~=1.9.78", optional = true }
trendln = "~=0.1.10"
notebook = { version = "~=7.4.5", optional = true }
ipykernel = { version = "~=6.30.1", optional = true }
pyarrow = "^21.0.0"
pandas-ta = "^0.4.71b0"
cachetools = "^6.2.0"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "~=8.3.2"
pytest-cov = "~=5.0.0"
black = "~=24.8.0"
flake8 = "~=7.1.1"
isort = "~=5.13.2"
mypy = "~=1.11.2"
pre-commit = "~=3.8.0"

[tool.poetry.group.visualization.dependencies]
matplotlib = "~=3.10.6"
mplfinance = "~=0.12.10b0"
pyqt5 = "~=5.15.11"

[tool.poetry.group.jupyter.dependencies]
notebook = "~=7.4.5"
ipykernel = "~=6.30.1"

[tool.poetry.group.backtesting.dependencies]
backtrader = "~=1.9.78"

[tool.poetry.extras]
visualization = ["matplotlib", "mplfinance", "pyqt5"]
jupyter = ["notebook", "ipykernel"]
backtesting = ["backtrader"]
all = ["matplotlib", "mplfinance", "pyqt5", "notebook", "ipykernel", "backtrader"]

[tool.poetry.scripts]
chart = "dev_chartter_v2.cli:generate_chart"
backtest = "dev_chartter_v2.cli:run_backtest"

[build-system]
requires = ["poetry-core>=2.0.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
